# OptiWise

./: .gitignore  CMakeLists.txt  README.md  middleware.ts  package-lock.json  package.json
Backend/: package-lock.json  package.json
Backend/src/: app.module.ts  app.service.ts  main.ts  polyfill.ts
Frontend/: middleware.ts  package-lock.json  package.json
Frontend/components/: Footer.tsx  Image.tsx  Layout.tsx  Navbar.tsx  ProtectedRoute.tsx  UpcomingEvents.tsx
Frontend/context/: AuthContext.tsx
Frontend/contexts/: AuthContext.tsx
Frontend/functions/: deleteUser.ts
Frontend/lib/: favoritesService.ts  stockService.ts  supabase.ts
Frontend/pages/: _app.tsx  about.tsx  account.tsx  ai-assistant.tsx  analyses.tsx  breakeven.tsx  cookies.tsx  cot-reports.tsx  country-economics.tsx  currency-forecasting.tsx  disclaimer.tsx  favorites.tsx  features.tsx  hot-topics.tsx  index.tsx  login.tsx  market-insights.tsx  personal-data.tsx  privacy.tsx  quantum-screener.tsx  rankings.tsx  register.tsx  reset-password.tsx  risk-disclosure.tsx  settings.tsx  (+3 more)
app/: CMakeLists.txt  main.cpp
components/: Layout.js  Layout.tsx  Navbar.tsx
context/: AuthContext.tsx
pages/: _app.tsx  about.tsx  analyses.tsx  index.tsx  pricing.tsx  register.tsx  reset-password.tsx
src/: CMakeLists.txt  CSVReaderWriter.cpp
src/AlphaVantageAdapter/: AlphaVantageAPI.cpp
src/Asset/: Asset.cpp  Stock.cpp
styles/: Account.module.css  Footer.module.css  Home.module.css  Layout.module.css  Navbar.module.css  globals.css
tests/: CMakeLists.txt  adder_t.cpp
utils/: supabaseClient.ts
(+176 files in other folders)
